json.peg
# Extended JSON grammar
#
# Reference:
# - https://json.org/ and ECMA-262 Ed.5
# - https://github.com/pointlander/peg
#
# Extended features:
# - trailing comma of Object and Array
# - traditional, end of line, or pragma comments
# - simple identifier as object key without quotes
# - Python boolean constants
# - Python None as null
# - Python style single quote string
# - include other JSON files


package parser

type JSON Peg {
}


Document  <-  Spacing JSON EOT
JSON      <-  ( Object / Array / String / True / False / Null / Number / Include ) Spacing
Object    <-  LWING ( ObjectKey COLON JSON COMMA )* ( ObjectKey COLON JSON )? RWING
ObjectKey <-  String / SimpleIdentifier
Array     <-  LBRK ( JSON COMMA )* JSON? RBRK
Include   <-  '@incl(' String ')'

SimpleIdentifier    <-  [0-9A-Za-z_$]+
String              <-  SingleQuoteLiteral / DoubleQuoteLiteral
SingleQuoteLiteral  <-  '\'' ( SingleQuoteEscape / !['\\\n\r] .)* '\''
DoubleQuoteLiteral  <-  '\"' ( DoubleQuoteEscape / !["\\\n\r] .)* '\"'
SingleQuoteEscape   <-  '\\' ( [btnfr'\\/] / UnicodeEscape )
DoubleQuoteEscape   <-  '\\' ( [btnfr"\\/] / UnicodeEscape )
UnicodeEscape       <-  'u' HexDigit HexDigit HexDigit HexDigit
HexDigit            <-  [a-f] / [A-F] / [0-9]

True            <-  'true'  / 'True'
False           <-  'false' / 'False'
Null            <-  'null'  / 'None'

Number          <-  Minus? IntegralPart FractionalPart? ExponentPart?
Minus           <-  '-'
IntegralPart    <-  '0' / [1-9] [0-9]*
FractionalPart  <-  '.' [0-9]+
ExponentPart    <-  "e" ( '+' / '-' )? [0-9]+

Spacing         <-  ( Whitespace / LongComment / LineComment / Pragma )*
Whitespace      <-  [ \t\r\n]+
LongComment     <-  '/*'  (!'*/' .)*    '*/'
LineComment     <-  '//'  (![\r\n] .)*  [\r\n]
Pragma          <-  '#'   (![\r\n] .)*  [\r\n]

LWING           <-  '{'  Spacing
RWING           <-  '}'  Spacing
LBRK            <-  '['  Spacing
RBRK            <-  ']'  Spacing
COMMA           <-  ','  Spacing
COLON           <-  ':'  Spacing

EOT <- !.
